syntax = "proto3";
option csharp_namespace = "AuthenticationServiceClient";

service AuthenticationService {
  rpc CreateAccessToken (CreateAccessTokenRequest) returns (CreateAccessTokenResponse) {}
  rpc ValidateAccessToken (ValidateAccessTokenRequest) returns (ValidateAccessTokenResponse) {}
}

message CreateAccessTokenRequest {
  int32 user_id = 1;
  string password = 2;
}

message CreateAccessTokenResponse {
  string access_token = 1;
}

message ValidateAccessTokenRequest {
  string access_token = 1;
}
message ValidateAccessTokenResponse{
  bool is_valid = 1;
}